fixed error with align items

--- a/app/assets/stylesheets/components/_game_card.scss
+++ b/app/assets/stylesheets/components/_game_card.scss
@@ -95,3 +95,10 @@
   opacity: 0.8;
   width: 380px;
 }
+.games-show-team {
+  margin-bottom: 15px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
