--- a/app/assets/stylesheets/components/_team-index.scss
+++ b/app/assets/stylesheets/components/_team-index.scss
@@ -61,7 +61,6 @@
 
 .team-index-card {
   margin-bottom: 15px;
-  align-items: center;
   display: flex;
   justify-content: center;
   flex-direction: column;
